--- a/src/components/CarContainer/carcontainer.module.scss
+++ b/src/components/CarContainer/carcontainer.module.scss
@@ -1,48 +1,55 @@
 @import "../../scss/defaults.scss";
 
 .car {
-    @include createFlex(flex, center, center, column, wrap);
-    border: 1px solid red;
-    width: 25%;
-    height: auto;
-    gap: 20px;
-    img {
-        width: 100%;
+  @include createFlex(flex, center, center, column, wrap);
+  border: 10px solid rgb(223, 223, 223);
+  border-radius: 20px;
+  width: 25%;
+  height: auto;
+  gap: 20px;
+  margin: 20px;
+  img {
+    width: 100%;
+  }
+  .car__icons {
+    @include createFlex(flex, space-around, center, row, wrap);
+    width: 100%;
+    .icon {
+      width: $iconWidth;
     }
-    .car__info {
-        @include createFlex(flex, space-around, center, row, wrap);
-        border: 1px solid blue;
-        width: 100%;
-        img {
-            width: 2vw;
-        }
-        .icon {
-            width: 4vw;
-        }
-    }
+  }
+  .car__info {
+    @include createFlex(flex, space-evenly, flex-start, row, wrap);
+    width: 100%;
     .rent_button {
-        color: #fff;
-        background-color: #F81B1B;
-        padding: 1em;
-        border-radius: 10px 20px;
-        margin-bottom: 20px;
-        transition: 300ms ease-in-out;
-        &:hover {
-            background-color: #fff;
-            color: #F81B1B;
-            border: 1px solid #F81B1B;
-        }
+      color: #fff;
+      background-color: #f81b1b;
+      padding: 1em;
+      border-radius: 10px 20px;
+      margin-bottom: 20px;
+      transition: 300ms ease-in-out;
+      &:hover {
+        background-color: #fff;
+        color: #f81b1b;
+        border: 1px solid #f81b1b;
+      }
     }
+    img {
+      width: $iconWidth + 20px;
+      cursor: pointer;
+      margin-top: 5px;
+    }
+  }
 }
 
-@media screen and (max-width: 540px) {
-    .car {
-        width: 100%;
-    }
+@media screen and (max-width: 1134px) {
+  .car {
+    width: 33%;
+  }
 }
 
-@media screen and (min-width: 768px) {
-    .car {
-        width: 50%;
-    }
+@media screen and (max-width: 500px) {
+  .car {
+    width: 100%;
+  }
 }
