--- a/src/Pages/Admin/admin.module.scss
+++ b/src/Pages/Admin/admin.module.scss
@@ -10,6 +10,40 @@
     background-color: rgb(245, 245, 245);
 }
 
+.button {
+    margin: 2em;
+    border: 1px solid red;
+    color: white;
+}
+
+.modal_close {
+    display: none;
+}
+
+.modal {
+    @include createFlex(flex, center, center, column, wrap);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border: 1px solid blue;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    &_inputs {
+        @include createFlex(flex, space-around, center, column, wrap);
+        color: red;
+        background-color: rgb(201, 204, 204);
+        width: 50%;
+        height: 100vh;
+        padding: 2em;
+        input {
+            height: 32px;
+            width: 264px;
+        }
+    }
+}
+
 @media screen and (max-width: 900px) {
     .dashboard {
         flex-direction: column;
