--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
+$iconWidth: 20px;
+
 * {
   margin: 0;
   padding: 0;
