--- a/src/components/CarDisplay/cardisplay.module.scss
+++ b/src/components/CarDisplay/cardisplay.module.scss
@@ -18,7 +18,7 @@ h1 {
   .buttons,
   .images {
     flex: 1;
-    @include createFlex(flex, space-around, center, column, wrap);
+    @include createFlex(flex, center, center, column, wrap);
     height: auto;
   }
 
@@ -26,12 +26,11 @@ h1 {
     justify-content: space-around;
     height: 40vh;
     border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     background-color: white;
+    box-shadow: 0 4px 30px rgba(255, 0, 0, 1);
 
-    .button{
+    .button {
       opacity: 1;
-      outline: 0;
       color: #fff;
       line-height: 40px;
       position: relative;
@@ -39,74 +38,73 @@ h1 {
       letter-spacing: 1px;
       display: inline-block;
       text-decoration: none;
-      font-family: 'Open Sans';
       text-transform: uppercase;
-      
-      &:hover{
-        
-        &:after{
+      &:hover {
+        &:after {
           opacity: 1;
           transform: translateY(0) rotateX(0);
         }
-        
-        &:before{
+
+        &:before {
           opacity: 0;
           transform: translateY(50%) rotateX(90deg);
         }
       }
-      
-      &:after{
+
+      &:after {
         top: 0;
         left: 0;
         opacity: 0;
         width: 100%;
-        color: #323237;
+        color: #fff;
         display: block;
         transition: 0.5s;
         position: absolute;
-        background: #adadaf;
+        background: #f81b1b;
         content: attr(data-back);
         transform: translateY(-50%) rotateX(90deg);
+        border-radius: 10px 16px;
       }
-      
-      &:before{
+
+      &:before {
         top: 0;
         left: 0;
         opacity: 1;
-        color: #adadaf;
+        color: #fff;
         display: block;
         padding: 0 30px;
         line-height: 40px;
         transition: 0.5s;
         position: relative;
-        background: #323237;
+        background: #f81b1b;
         content: attr(data-front);
         transform: translateY(0) rotateX(0);
+      border-radius: 16px 10px;
       }
     }
   }
 
-    .images {
-      // border: 1px solid blue;
-      flex-direction: column !important;
-      height: 55vh;
+  .images {
+    // border: 1px solid blue;
+    flex-direction: column !important;
+    height: 55vh;
 
-      img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-        transition: 300ms ease-in-out;
-        transition: opacity 0.5s ease, transform 0.5s ease;
-      }
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      transition: 300ms ease-in-out;
+      transition: opacity 0.5s ease, transform 0.5s ease;
     }
   }
+}
 
-  .fadeImage {
-    opacity: 0;
-    transform: scale(0.8);
-  }
+.fadeImage {
+  opacity: 0;
+  transform: scale(0.8);
+}
 
-  img:not(.fadeImage) {
-    opacity: 1;
-    transform: scale(1);
-  }
+img:not(.fadeImage) {
+  opacity: 1;
+  transform: scale(1);
+}
