--- a/src/components/CarDisplay/cardisplay.module.scss
+++ b/src/components/CarDisplay/cardisplay.module.scss
@@ -12,7 +12,7 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   border-radius: 10%;
-  background: rgba(255, 255, 255, 0.37);
+  background: rgba(196, 19, 19, 0.37);
   border-radius: 16px;
 
   .buttons,
@@ -27,7 +27,8 @@ h1 {
     height: 40vh;
     border-radius: 16px;
     background-color: white;
-    box-shadow: 0 4px 30px rgba(255, 0, 0, 1);
+    box-shadow: 0 4px 35px rgba(244, 242, 242, 0.4);
+
 
     .button {
       opacity: 1;
@@ -86,7 +87,7 @@ h1 {
 
   .images {
     // border: 1px solid blue;
-    flex-direction: column !important;
+    flex-direction: column;
     height: 55vh;
 
     img {
