changed the location of navbar.scss and header.scss, moved to their respective components' folder for better file structure

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,4 +1,4 @@
-@import "./defaults.scss";
+@import "../../scss/defaults.scss";
 
 header {
     @include createFlex(flex, space-around, center, 0, 0);
