--- a/src/components/CarDisplay/cardisplay.module.scss
+++ b/src/components/CarDisplay/cardisplay.module.scss
@@ -1,6 +1,6 @@
 @import "../../scss/defaults.scss";
 
-h1 {
+.car_display_title {
   text-align: center;
 }
 
@@ -29,7 +29,6 @@ h1 {
     background-color: white;
     padding: 2em;
     box-shadow: 0 4px 35px rgba(244, 242, 242, 1);
-
 
     .button {
       opacity: 1;
