--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
 $iconWidth: 20px;
+$defaultRed: rgb(248,27,27);
+$lightRed: rgb(247, 107, 107);
+
 
 * {
   margin: 0;
