added mobile-responsiveness to car dispay component

--- a/src/components/CarDisplay/cardisplay.module.scss
+++ b/src/components/CarDisplay/cardisplay.module.scss
@@ -110,3 +110,10 @@ img:not(.fadeImage) {
   opacity: 1;
   transform: scale(1);
 }
+
+
+@media screen and (max-width: 1028px) {
+  .car_display{
+    flex-direction: column;
+  }
+}
