--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,7 @@ header {
     @include createFlex(flex, space-around, center, 0, 0);
     width: 100%;
     height: 90vh;
-    text-align: center;
+    text-align: left;
     h1 {
         font-size: 3em;
     }
