--- a/src/components/HeroSection/herosection.module.scss
+++ b/src/components/HeroSection/herosection.module.scss
@@ -13,6 +13,7 @@
       width: 70%;
       gap: 20px;
       .reason {
+        margin-top: 2em;
         padding: 2em;
         text-align: start;
         background-color: $lightRed;
@@ -22,6 +23,20 @@
         p {
           text-align: left;
           color: white;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .hero__container {
+    .hero__content {
+      .reasons {
+        flex-direction: column;
+        width: 100%;
+        .reason {
+          text-align: center;
         }
       }
     }
