--- a/src/components/CarDisplay/cardisplay.module.scss
+++ b/src/components/CarDisplay/cardisplay.module.scss
@@ -117,3 +117,9 @@ img:not(.fadeImage) {
     flex-direction: column;
   }
 }
+//iPhone SE
+@media screen and (max-width: 375px) and (max-height: 667px) {
+  .car_display {
+    width: 100%;
+  }
+}
