--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -7,6 +7,7 @@ header {
     text-align: left;
     h1 {
         font-size: 3em;
+        text-align: center;
     }
     .header__carblob {
         position: relative;
